--- a/Views/Members/Index.cshtml
+++ b/Views/Members/Index.cshtml
@@ -18,21 +18,28 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var obj in Model)
-        {
-            <tr>
-                <td width="50%">
-                    @obj.Name
-                </td>
-                <td width="30%">
-                    @obj.MembershipDate
-                </td>
-                <td width="50%">
-                    @obj.Library.Name
-                </td>
+    @if (Model != null)
+    {  
+          @foreach (var obj in Model)
+          {
+              <tr>
+                  <td width="50%">
+                      @obj.Name
+                  </td>
+                  <td width="30%">
+                      @obj.MembershipDate
+                  </td>
+                  <td width="50%">
+                      @obj.Library.Name
+                  </td>
                
 
-            </tr>
-        }
+              </tr>
+          }
+      }
+      else
+      {
+          <p>no data found</p>
+      }
     </tbody>
 </table>
